add style height for image to scale

--- a/ip-website.html
+++ b/ip-website.html
@@ -6,7 +6,11 @@
 
   <body>
     <h1> Naomi Chika</h1>
-    <img src="selfie.JPG">
+    <img src="selfie.JPG" style="height:fit-content">
+    
+    
+
+
 
 
 
