--- a/ip-website.html
+++ b/ip-website.html
@@ -6,7 +6,7 @@
 
   <body>
     <h1> Naomi Chika</h1>
-    <img src="selfie.JPG" style="height:fit-content">
+    <img src="selfie.JPG" style="height: 20%">
     
     
 
