--- a/ip-website.html
+++ b/ip-website.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Independent Project #1</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 
   </head>
-
   <body>
     <h1> Naomi Chika</h1>
     <img src="selfie.JPG" style="height: 20%">
@@ -14,7 +15,7 @@
 
 
 
-
+ 
 
   </body>
 
