add link to my-favourite-things.html + add a strong tag to the link

--- a/ip-website.html
+++ b/ip-website.html
@@ -8,6 +8,18 @@
   <body>
     <h1> Naomi Chika</h1>
     <img src="selfie.JPG" style="height: 20%">
+    <div class="projects">
+      <p><strong><a href="my-favourite-things.html">Pet Website</a>.</strong></p>
+      <p>A website that allows the user to view a webpage about my pet.</p>
+
+
+
+
+
+
+    </div>
+
+
     
     
 
