add about me section which includes ul + li and add a paragraph under my header

--- a/ip-website.html
+++ b/ip-website.html
@@ -7,7 +7,19 @@
   </head>
   <body>
     <h1> Naomi Chika</h1>
-    <img src="selfie.JPG" style="height: 20%">
+      <p>Hi! My name is Naomi Chika, and this is what I look like!</p>
+      <img src="selfie.JPG" style="height: 20%">
+      
+      <p>About Me:</p>
+      <ul>
+        <li>Age: 24</li>
+        <li>Sign: Aquarius</li>
+        <li>Education level:  BA</li>
+        <li>Hobbies: Watching movies/tv shows, reading, listening to music, being around friends.</li>
+      </ul>
+      
+
+
     <div class="projects">
       <p><strong><a href="my-favourite-things.html">Pet Website</a>.</strong></p>
       <p>A website that allows the user to view a webpage about my pet.</p>
