add a strong tag to my name

--- a/ip-website.html
+++ b/ip-website.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <h1> Naomi Chika</h1>
-      <p>Hi! My name is Naomi Chika, and this is what I look like!</p>
+      <p>Hi! My name is <strong>Naomi Chika</strong>, and this is what I look like!</p>
       <img src="selfie.JPG" style="height: 20%" alt="A picture of my cousin and me">
     
-    <div class = "About Me">
+    <div class = "About-Me">
       <p>About Me:</p>
       <ul>
         <li>Age: <em>24</em></li>
