--- a/ip-website.html
+++ b/ip-website.html
@@ -22,7 +22,8 @@
 
 
     <div class="projects">
-      <p>During the first week of Software Development Prep, we had the opportunity to complete various projects in order to practice the new skills we learnt. </p>
+      <p><span class="projects2">Projects</span></p>
+      <p><span class="first-week">During the first week of Software Development Prep, we had the opportunity to complete various projects in order to practice the new skills we learnt. Here are some of them:</span> </p>
       <p><strong><a href="my-favourite-things.html">Pet Website</a>.</strong></p>
       <p>A website that allows the user to view a webpage about my pet.</p>
 
