add link to git repository + add a ol list

--- a/ip-website.html
+++ b/ip-website.html
@@ -24,8 +24,11 @@
     <div class="projects">
       <p><span class="projects2">Projects</span></p>
       <p><span class="first-week">During the first week of Software Development Prep, we had the opportunity to complete various projects in order to practice the new skills we learnt. Here are some of them:</span> </p>
-      <p><strong><a href="my-favourite-things.html">Pet Website</a>.</strong></p>
-      <p>A website that allows the user to view a webpage about my pet.</p>
+      <ol>
+        <li><a href="my-favourite-things.html">Pet Website</a>.</li>
+          <p>A website that allows the user to view a webpage about my pet.</p>
+        <li><a href="https://github.com/naomi-ch/my-first-webpage.git">My First Webpage</a>.</li>
+          <p>My first attempt at building a wepbage.</p>
 
 
 
