--- a/ip-website.html
+++ b/ip-website.html
@@ -26,9 +26,9 @@
       <p><span class="first-week">During the first week of Software Development Prep, we had the opportunity to complete various projects in order to practice the new skills we learnt. Here are some of them:</span> </p>
       <ol>
         <li><a href="my-favourite-things.html">Pet Website</a>.</li>
-          <p>A website that allows the user to view a webpage about my pet.</p>
+          <p>A website that allows the user to view a webpage about my pet. Uses HTML and CSS</p>
         <li><a href="https://github.com/naomi-ch/my-first-webpage.git">My First Webpage</a>.</li>
-          <p>My first attempt at building a wepbage.</p>
+          <p>My first attempt at building a wepbage. Uses HTML and CSS.</p>
 
 
 
