add spans in the project section and about me section

--- a/ip-website.html
+++ b/ip-website.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Independent Project #1</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media = "all">
 
   </head>
   <body>
@@ -11,7 +11,7 @@
       <img src="selfie.JPG" style="height: 20%" alt="A picture of my cousin and me">
     
     <div class = "About-Me">
-      <p>About Me:</p>
+      <p><span class="about-me-title">About Me:</span></p>
       <ul>
         <li>Age: <em>24</em></li>
         <li>Sign: <em>Aquarius</em></li>
@@ -26,9 +26,9 @@
       <p><span class="first-week">During the first week of Software Development Prep, we had the opportunity to complete various projects in order to practice the new skills we learnt. Here are some of them:</span> </p>
       <ol>
         <li><a href="my-favourite-things.html">Pet Website</a>.</li>
-          <p>A website that allows the user to view a webpage about my pet. Uses HTML and CSS</p>
+          <p><span class="description1">A website that allows the user to view a webpage about my pet. Uses HTML and CSS.</span></p>
         <li><a href="https://github.com/naomi-ch/my-first-webpage.git">My First Webpage</a>.</li>
-          <p>My first attempt at building a wepbage. Uses HTML and CSS.</p>
+          <p><span class="description2">My first attempt at building a wepbage. Uses HTML and CSS.</span></p>
 
 
 
