change the pet website link to git repo link

--- a/ip-website.html
+++ b/ip-website.html
@@ -25,7 +25,7 @@
       <p><span class="projects2">Projects</span></p>
       <p><span class="first-week">During the first week of Software Development Prep, we had the opportunity to complete various projects in order to practice the new skills we learnt. Here are some of them:</span> </p>
       <ol>
-        <li><a href="my-favourite-things.html">Pet Website</a>.</li>
+        <li><a href="https://github.com/naomi-ch/pet-website.git">Pet Website</a>.</li>
           <p><span class="description1">A website that allows the user to view a webpage about my pet. Uses HTML and CSS.</span></p>
         <li><a href="https://github.com/naomi-ch/my-first-webpage.git">My First Webpage</a>.</li>
           <p><span class="description2">My first attempt at building a wepbage. Uses HTML and CSS.</span></p>
